# dyna

./: Cargo.toml  README.md
example/: .gitignore  Cargo.toml  README.md
example/dynamic-guest/: Cargo.toml
example/dynamic-guest/src/: bindings.rs  lib.rs
example/dynamic-guest/wit/: world.wit
example/host/: Cargo.toml
example/host/src/: main.rs
example/static-guest/: Cargo.toml
example/static-guest/src/: bindings.rs  lib.rs
example/static-guest/wit/: world.wit
guest/: Cargo.toml
guest/src/: bindings.rs  lib.rs
guest/wit/: world.wit
src/: lib.rs  main.rs
wit/: world.wit
