[package]
name = "dynamic-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = [
    "realloc",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:dyna"

[package.metadata.component.target.dependencies]
"component:dyna" = { path = "../../wit" }
