[package]
name = "static-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = [
    "realloc",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:example"

[package.metadata.component.dependencies]
